// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should test a default HCImageCropper 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCImageCropper with imgSrc 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    style="padding-right: 1024px; overflow: hidden;"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      />
    </div>
    <div
      class="MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        data-testid="sentinelStart"
        tabindex="0"
      />
      <div
        class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
        role="presentation"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        tabindex="-1"
      >
        <div
          aria-labelledby=":r0:"
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm css-hbme9j-MuiPaper-root-MuiDialog-paper"
          role="dialog"
        >
          <div
            class="MuiDialogContent-root hc-modal css-s6iik2-MuiDialogContent-root"
          >
            <div
              class="MuiBox-root css-fum3zz"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1tzpjxy-MuiTypography-root"
              >
                Crop Image
              </p>
              <div
                class="MuiBox-root css-1dyb892"
              >
                <div
                  class="MuiStack-root css-85zd1j-MuiStack-root"
                >
                  <div
                    class="MuiStack-root css-1jd676v-MuiStack-root"
                  >
                    <div
                      class="MuiStack-root css-nen11g-MuiStack-root"
                    >
                      <div
                        class="MuiBox-root css-1hjq20a"
                      >
                        <div
                          class="MuiBox-root css-yuob64"
                        />
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-14swxvp-MuiTypography-root"
                        >
                          Scale
                        </p>
                        <span
                          class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-186ettg-MuiSlider-root"
                        >
                          <span
                            class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
                          />
                          <span
                            class="MuiSlider-track css-ttgsjq-MuiSlider-track"
                            style="left: 0%; width: 20%;"
                          />
                          <span
                            class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-m3xzcs-MuiSlider-thumb"
                            data-index="0"
                            style="left: 20%;"
                          >
                            <input
                              aria-label="custom thumb label"
                              aria-orientation="horizontal"
                              aria-valuemax="5"
                              aria-valuemin="0"
                              aria-valuenow="1"
                              data-index="0"
                              max="5"
                              min="0"
                              step="0.1"
                              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                              type="range"
                              value="1"
                            />
                            <span
                              aria-hidden="true"
                              class="MuiSlider-valueLabel css-807a7a-MuiSlider-valueLabel"
                            >
                              <span
                                class="MuiSlider-valueLabelCircle"
                              >
                                <span
                                  class="MuiSlider-valueLabelLabel"
                                >
                                  1
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </div>
                       
                    </div>
                    <div
                      class="ReactCrop ReactCrop--no-animate"
                    >
                      <div
                        class="ReactCrop__child-wrapper"
                      >
                        <img
                          alt="Upload"
                          src="https://www.truechart.com/wp-content/uploads/2020/02/1.20_01_22_TRUE-CHART-Logo-V3-ohne-rand.png"
                          style="transform: scale(1) rotate(0deg);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-1l4w6pd"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1fo91rz-MuiButtonBase-root-MuiButton-root"
                tabindex="0"
                type="button"
              >
                CANCEL
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-8ecxql-MuiButtonBase-root-MuiButton-root"
                tabindex="0"
                type="button"
              >
                CONFIRM
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        data-testid="sentinelEnd"
        tabindex="0"
      />
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  >
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
